# aao-offline-player

./: .gitignore  FORMAT.md  PLUGINS.md  README.md  V1_RELEASE_NOTES.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
engine/: bridge.js  localstorage_bridge.html  localstorage_migrate.html  player.html
engine/CSS/: court_records.css  player_dark.css  player_global.css  player_pwstyle.css  style_form.css  style_main.css  top_screen_engine.css
engine/Javascript/: Modules.js  actions_parameters.js  courtrecord_navigator.js  default_data.js  display_engine_characters.js  display_engine_globals.js  display_engine_text.js  engine_config.js  engine_events.js  engine_plugins.js  events.js  expression_engine.js  form_elements.js  frame_data.js  gamepad_controls.js  input_manager.js  input_registry.js  keyboard_controls.js  loading_bar.js  nodes.js  objects_model.js  option_navigator.js  player.js  player_actions.js  player_courtrecord.js  player_images.js  player_save.js  player_sound.js  settings_panel.js  sound-howler.js  style_loader.js  theme_manager.js  trial.js  trial_data.js  trial_object_model.js
engine/config/: default_config.json
scripts/: gen-android-round-icons.py  run-tests.sh
src/: download.js  helpers.js  importSection.js  index.html  library.js  main.js  player.js  saves.js  settings.js  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  collections.rs  config.rs  error.rs  importer.rs  lib.rs  main.rs  server.rs  utils.rs
src-tauri/src/commands/: cases.rs  collections.rs  dialogs.rs  download.rs  export.rs  game.rs  import.rs  mod.rs  plugins.rs  saves.rs  settings.rs
src-tauri/src/downloader/: asset_downloader.rs  asset_paths.rs  asset_resolver.rs  case_fetcher.rs  dedup.rs  manifest.rs  mod.rs  paths.rs  pipeline.rs  vfs.rs
src-tauri/src/downloader/asset_downloader/: download.rs  log.rs  mod.rs  test_download.rs  test_url_encoding.rs  test_utils.rs  url_encoding.rs  utils.rs
src-tauri/src/downloader/asset_resolver/: defaults.rs  extractors.rs  helpers.rs  mod.rs  rewriter.rs
src-tauri/src/downloader/asset_resolver/tests/: mod.rs  test_defaults.rs  test_extractors.rs  test_helpers.rs  test_rewriter.rs
src-tauri/src/downloader/dedup/: helpers.rs  index.rs  mod.rs  operations.rs  optimize.rs
src-tauri/src/downloader/dedup/tests/: mod.rs  test_helpers.rs  test_index.rs  test_operations.rs  test_optimize.rs
src-tauri/src/importer/: aaoffline.rs  aaoffline_helpers.rs  case_export.rs  case_import.rs  mod.rs  plugins_case.rs  plugins_global.rs  plugins_utils.rs  saves.rs  shared.rs
src-tauri/src/importer/tests/: mod.rs  test_aaoffline.rs  test_case_export.rs  test_case_import.rs  test_plugins_case.rs  test_plugins_global.rs  test_plugins_utils.rs  test_saves.rs
test-data/: Test A - Explicit Redirect.aaocase  Test B - Auto-Continue (action=0).aaocase  Test C - Auto-Continue (no GameOver).aaocase
(+76 files in other folders)
