[package]
name = "aao-offline-player"
version = "0.1.0"
description = "AAO Offline Player — download and play Ace Attorney Online cases offline"
authors = ["TheMystery28"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aao_offline_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
portpicker = "0.1.1"
tiny_http = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
regex = "1"
futures = "0.3"
tokio = { version = "1", features = ["fs"] }
tauri-plugin-dialog = "2.6.0"
zip = "2"
url = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "time"] }

